p2 - fix overlapping divs for mobile

--- a/project2_web/submission/css/base.css
+++ b/project2_web/submission/css/base.css
@@ -84,6 +84,7 @@ h5 {
 	font-size: 27px;
 	color: #286744;
 	font-weight: bold;
+	margin-top:15px;
 	
 }
 
